<resources>
    <string name="app_name">OMDB movies</string>
    <string name="title_movie_detail">Movie Detail</string>
    <string name="enter_search_string">Enter search string</string>
    <string name="date">&lt;b>Release Date:&lt;/b> %1$s</string>
    <string name="actors">&lt;b>Actors:&lt;/b> %1$s</string>
    <string name="production">&lt;b>Production:&lt;/b> %1$s</string>
    <string name="genre">&lt;b>Genre:&lt;/b> %1$s</string>
    <string name="plot">&lt;b>Plot:&lt;/b> %1$s</string>
    <string name="load_fail_message">Fail to load movies.</string>
</resources>
